--- a/src/page/dissection/index.css
+++ b/src/page/dissection/index.css
@@ -1,10 +1,28 @@
 .body {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     background-color: white;
+    padding: 3vh 5vw;
 }
 .comment {
-    height: 20vh;
+    height: 8vh;
+    padding-left: 2vw;
     width: 80%;
-    background-color: rgb(177, 166, 166);
+    background-color: rgb(240, 240, 240);
+}
+
+.hr {
+    width: 100%;
+    height: 1px;
+    margin: 2vh 0;
+    background-color: rgb(196, 196, 196);
+}
+
+.reply {
+    display: flex;
+    flex-direction: column;
+}
+
+.reply-detail b {
+    margin-left: 1vw;
 }
