--- a/src/page/dissection/index.css
+++ b/src/page/dissection/index.css
@@ -5,7 +5,7 @@
     padding: 3vh 5vw;
 }
 .comment {
-    padding-left: 2vw;
+    padding:2vh 2vw;
     width: 80%;
     background-color: rgb(240, 240, 240);
 }
@@ -22,6 +22,22 @@
     flex-direction: column;
 }
 
+.reply-detail {
+    position: relative;
+}
+
 .reply-detail b {
     margin-left: 1vw;
+}
+
+.interaction {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    width: 4vw;
+    right: 15vw;
+}
+
+.likeicon {
+    cursor: pointer;
 }
