--- a/src/page/quiz/index.css
+++ b/src/page/quiz/index.css
@@ -8,10 +8,11 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 40%;
-    width: 60%;
+    /* height: 40%;
+    width: 60%; */
     background-color: rgb(217, 218, 221);
     padding: 3vh 3vw;
+    font-size: 20px;
 }
 
 .text {
@@ -26,20 +27,21 @@
     margin-top: 1vh;
 }
 
-.button {
+.button-quiz {
     margin-top: 2vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(109, 179, 251);
-    height: 20%;
-    width: 15%;
+    background-color: #2140E3;
+    height: 8vh;
+    width: 15vw;
     border-radius: 8%;
     cursor: pointer;
+    color: white;
 }
 
-.button:hover {
-    background-color: rgb(140, 200, 250);
+.button-quiz:hover{
+    background-color: rgb(1, 131, 252);
 }
 
 .forbid {
