--- a/src/page/quiz/index.css
+++ b/src/page/quiz/index.css
@@ -49,10 +49,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(177, 177, 173);
-    height: 20%;
-    width: 15%;
+    background-color: #2140E3;
+    height: 8vh;
+    width: 15vw;
     border-radius: 8%;
+    cursor: pointer;
+    color: white;
+    background-color: rgb(177, 177, 173);
 }
 
 .test {
