--- a/src/page/quiz/index.css
+++ b/src/page/quiz/index.css
@@ -49,7 +49,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #2140E3;
     height: 8vh;
     width: 15vw;
     border-radius: 8%;
@@ -59,6 +58,7 @@
 }
 
 .test {
+    font-size: 18px;
     padding: 3vh 3vw;
     height: 100%;
     width: 100%;
@@ -67,29 +67,31 @@
 
 .submit {
     margin-top: 4vh;
-    width: 5vw;
-    height: 5vh;
+    color: white;
+    width: 8vw;
+    height: 7vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(109, 179, 251);
+    background-color: #2140E3;
     border-radius: 8%;
     cursor: pointer;
 }
 
 .submit:hover {
-    background-color: rgb(180, 200, 251);
+    background-color: rgb(1, 131, 252);
 }
 
 .no-submit {
     margin-top: 4vh;
-    width: 5vw;
-    height: 5vh;
+    color: white;
+    width: 8vw;
+    height: 7vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(177, 179, 180);
     border-radius: 8%;
+    background-color: rgb(177, 179, 180);
 }
 
 .timer {
