--- a/src/page/quizA/index.css
+++ b/src/page/quizA/index.css
@@ -16,3 +16,37 @@
 .tostudy:hover {
     background-color: rgb(1, 131, 252);
 }
+
+.red {
+    color: red;
+}
+.quiz-c {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    background-color: rgb(236,241,248);
+}
+
+.quiz-i {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    width: 60%;
+}
+
+.quiz-content {
+    width: 80%;
+}
+
+.quiz-h {
+    color: #0095ff;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 5vh;
+}
+
+.quiz-t {
+    margin-bottom: 5vh;
+}
