--- a/src/page/quizA/index.css
+++ b/src/page/quizA/index.css
@@ -86,7 +86,8 @@
 
 .quiz-label {
     display: flex;
-    height: 100%;
+    height: 35px;
+    width: 70px;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
