--- a/src/page/quizB/index.css
+++ b/src/page/quizB/index.css
@@ -1,6 +1,6 @@
-.toend {
-    margin-top: 2vh;
-    margin-left: 5vw;
+.tostudy {
+    margin-top: 5vh;
+    margin-bottom: 5vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,6 +13,124 @@
     font-size: 18px;
 }
 
-.toend:hover {
+.tostudy:hover {
     background-color: rgb(1, 131, 252);
+}
+
+.red {
+    color: red;
+}
+
+.quiz-c {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    background-color: rgb(236, 241, 248);
+}
+
+.quiz-i {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    width: 60%;
+    margin-top: 10vh;
+    padding-bottom: 20vh;
+}
+
+.quiz-content {
+    width: 80%;
+}
+
+.quiz-h {
+    margin-top: 5vh;
+    color: #0095ff;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 5vh;
+}
+
+.quiz-t {
+    margin-bottom: 5vh;
+}
+
+.quiz-q {
+    font-size: 15px;
+    margin-bottom: 10vh;
+}
+
+.quiz-q-i {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 5px;
+    border-bottom: 1px solid gainsboro;
+}
+
+.quiz-ques {
+    width: 52%;
+    font-size: 15px;
+}
+
+.quiz-radios {
+    display: flex;
+    width: 48%;
+}
+
+.quiz-radio {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    width: 20%;
+}
+
+.quiz-label {
+    box-sizing: border-box;
+    display: flex;
+    height: 35px;
+    width: 70px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    padding-bottom: 6px;
+}
+.quiz-label-B {
+    box-sizing: border-box;
+    display: flex;
+    height: 35px;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    padding-bottom: 6px;
+}
+.quiz-label-B:hover {
+    background-color: gainsboro;
+}
+
+.quiz-label:hover {
+    background-color: gainsboro;
+}
+
+.radio-in {
+    margin-right: 1.5vw;
+}
+
+.quiz-rt {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    height: 8vh;
+}
+
+.quiz-rt-B {
+    display: flex;
+    flex-direction: column;
+    width: 14%;
+    height: 10vh;
+}
+
+.quiz-type {
+    text-align: center;
 }
