--- a/src/page/quizB/index.css
+++ b/src/page/quizB/index.css
@@ -127,6 +127,7 @@
 .quiz-rt-B {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 14%;
     height: 10vh;
 }
